# polars_pandera_enum

./: CLAUDE.md  pyproject.toml
src/polars_pandera_enum/: __init__.py  analytics.py  data.py  inputs.py  pydantic_integration.py  schemas.py  type_integration.py
tests/: test_access_members.py  test_pydantic.py  test_type_integration.py
