[project]
name = "polars-pandera-enum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandera>=0.23.1", "polars>=1.27.1", "pydantic>=2.11.3"]


[project.scripts]
polars-pandera-enum = "polars_pandera_enum:main"


[dependency-groups]
dev = [
    "mypy>=1.15.0",
 "pytest>=8.3.5",
 "pytest-diff>=0.1.14",
 "pytest-watch>=4.2.0",
 "ruff>=0.11.5",
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
